# fungus

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/fungus_client/: Cargo.toml
src/fungus_client/src/session/: client_session.rs  mod.rs
src/fungus_database/: Cargo.toml
src/fungus_database/migrations/2024-04-30-025907_create_users/: up.sql
src/fungus_database/migrations/2024-04-30-030112_create_accounts/: up.sql
src/fungus_database/migrations/2024-05-13-220832_create_character_account_user/: down.sql  up.sql
src/fungus_database/src/: database.rs  lib.rs  schema.rs
src/fungus_database/src/daos/: account_dao.rs  avatar_look_dao.rs  character_dao.rs  character_stats_dao.rs  inventory_dao.rs  item_dao.rs  mod.rs  trunk_dao.rs  user_dao.rs
src/fungus_database/src/enums/: inv_type.rs  item_type.rs  mod.rs
src/fungus_database/src/game_data/: item_data.rs  mod.rs
src/fungus_database/src/game_data/game_info/: item_info.rs  mod.rs
src/fungus_database/src/macros/: enum_macros.rs  mod.rs
src/fungus_database/src/models/: account.rs  avatar_look.rs  character.rs  character_stats.rs  equipment.rs  inventory.rs  item.rs  mod.rs  sp_set.rs  trunk.rs  user.rs
src/fungus_database/src/serializers/: account_serializer.rs  avatar_look_serializer.rs  character_login_serializer.rs  character_select_serializer.rs  character_serializer.rs  character_stats_serializer.rs  equipment_serializer.rs  inventory_serializer.rs  item_serializer.rs  mod.rs  trunk_serializer.rs  user_serializer.rs
src/fungus_game/: Cargo.toml
src/fungus_game/src/: .env  lib.rs
src/fungus_game/src/entities/: account.rs  avatar_look.rs  character.rs  character_login.rs  character_stats.rs  equipment.rs  inventory.rs  item.rs  user.rs
src/fungus_game/src/errors/: mod.rs  service_errors.rs
src/fungus_game/src/game_data/: etc_data.rs  game_data.rs  item_data.rs  mod.rs
src/fungus_game/src/game_data/game_info/: etc_data.rs  item_info.rs  item_utilities.rs  job_utilities.rs  mod.rs
src/fungus_game/src/services/: account_service.rs  character_service.rs  game_data_service.rs  item_service.rs  mod.rs  service_registry.rs  user_service.rs
src/fungus_loader/: Cargo.toml
src/fungus_loader/src/: lib.rs
src/fungus_login/: Cargo.toml
src/fungus_login/src/: acceptor.rs  lib.rs  main.rs
src/fungus_login/src/enums/: login_type.rs
src/fungus_login/src/handlers/: login_handlers.rs  mod.rs  operation_handler.rs
src/fungus_login/src/packets/: login_packets.rs  mod.rs
src/fungus_macros/: Cargo.toml
src/fungus_net/: Cargo.toml
src/fungus_net/src/: lib.rs
src/fungus_net/src/channels/: client_channel.rs  mod.rs
src/fungus_net/src/packets/: mod.rs  operation_handler.rs
src/fungus_net/src/packets/client_packets/: client_packets.rs  mod.rs
src/fungus_net/src/packets/login_packets/: login_packets.rs  mod.rs
src/fungus_net/src/packets/login_packets/handlers/: login_handlers.rs  mod.rs
src/fungus_net/src/server/: server.rs
src/fungus_net/src/session/: client_session.rs
src/fungus_packet_utils/: Cargo.toml
src/fungus_packet_utils/src/: in_headers.rs  in_packet.rs  lib.rs  out_headers.rs  out_packet.rs  packet_errors.rs
src/fungus_packet_utils/src/crypto/: mod.rs  packet_cipher.rs  packet_coder.rs
src/fungus_packet_utils/src/traits/: encodable.rs  mod.rs
src/fungus_packet_utils/src/types/: mod.rs  packet_buffer.rs
src/fungus_packets/: Cargo.toml
src/fungus_packets/src/: in_headers.rs  in_packet.rs  lib.rs  operation_handler.rs  out_headers.rs  out_packet.rs  packet_errors.rs
src/fungus_packets/src/crypto/: mod.rs  packet_cipher.rs  packet_coder.rs
src/fungus_packets/src/login_packets/: login_packets.rs  mod.rs
src/fungus_packets/src/login_packets/handlers/: login_handlers.rs
src/fungus_packets/src/session/: client_session.rs
src/fungus_server/: .env  Cargo.toml
src/fungus_server/src/: main.rs
src/fungus_session/: Cargo.toml
src/fungus_utils/: Cargo.toml
src/fungus_utils/src/: lib.rs
src/fungus_utils/src/constants/: game_constants.rs  mod.rs  server_constants.rs
src/fungus_utils/src/enums/: character_id_result.rs  inv_type.rs  item_type.rs  mod.rs  server_status.rs
src/fungus_utils/src/errors/: convert_error.rs  mod.rs
src/fungus_utils/src/macros/: enum_macros.rs  fg_printc.rs  mod.rs
src/fungus_utils/src/traits/: encodable.rs  mod.rs
src/fungus_utils/src/types/: fungus_time.rs  mod.rs
src/fungus_utils/src/utility/: item_utility.rs  mod.rs
src/fungus_world/: Cargo.toml
src/fungus_world/src/: channel.rs  lib.rs  world.rs
src/fungus_world/src/services/: mod.rs  world_service.rs
