[package]
name = "fungus_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungus_packets = { path = "../fungus_packets" }
fungus_database = { path = "../fungus_database" }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"