[package]
name = "fungus_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungus_utils = { path = "../fungus_utils" }
diesel = { version = "2.1.6", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.199", features = ["derive"] }
chrono = "0.4.38"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
once_cell = "1.19.0"
rust-argon2 = "2.1.0"
log = "0.4.21"