[package]
name = "fungus_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_nx = { git = "https://github.com/not-ebx/rustNX", tag = "v0.1.4" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
fungus_utils = { path = "../fungus_utils" }
dotenvy = "0.15.7"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = {  version = "0.4.38", features = ["serde"] }
once_cell = "1.19.0"
rust-argon2 = "2.1.0"
log = "0.4.21"
strum_macros = "0.26.2"
strum = "0.26.2"