[package]
name = "fungus_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_nx = { git = "https://github.com/not-ebx/rustNX", tag = "v0.1.2" }
fungus_utils = { path = "../fungus_utils" }
fungus_database = { path = "../fungus_database" }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = {  version = "0.4.38", features = ["serde"] }
rust-argon2 = "2.1.0"
log = "0.4.21"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
serde = { version = "1.0.200", features = ["derive"] }