[package]
name = "fungus_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungus_packet_utils = { path = "../fungus_packet_utils" }
fungus_database = { path = "../fungus_database" }
fungus_utils = { path = "../fungus_utils" }
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.9.0-alpha.1"