[package]
name = "fungus_packet_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungus_utils = { path = "../fungus_utils" }
byteorder = "1.5.0"
strum = "0.26.2"
strum_macros = "0.26.2"
log = "0.4.21"
aes = "0.8.4"
ofb = "0.6.1"
chrono = "0.4.38"
once_cell = "1.19.0"