[package]
name = "fungus_packets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungus_net = { path = "../fungus_net" }
fungus_client = { path = "../fungus_client" }
fungus_database = { path = "../fungus_database" }
fungus_utils = { path = "../fungus_utils" }
fungus_session = { path = "../fungus_session" }
fungus_packet_utils = { path = "../fungus_packet_utils" }
log = "0.4.21"
rand = "0.9.0-alpha.1"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.37.0", features = ["full"] }