[package]
name = "fungus_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungus_login = { path = "../fungus_login" }
fungus_utils = { path = "../fungus_utils" }
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"