[package]
name = "fungus_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungus_game = { path = "../fungus_game" }
fungus_login = { path = "../fungus_login" }
fungus_utils = { path = "../fungus_utils" }
fungus_net = { path = "../fungus_net" }
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
once_cell = "1.19.0"