[package]
name = "fungus_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
byteorder = "1.5.0"
rand = "0.9.0-alpha.1"
diesel = { version = "2.1.6", features = ["postgres"] }  # Adjust for your database backend
strum = "0.26.2"
strum_macros = "0.26.2"
quote = "1.0.36"
syn = { version= "2.0.60", features = ["full"] }
proc-macro2 = "1.0.81"
